--- a/wallpaper.html
+++ b/wallpaper.html
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">TJMAC</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html#page-top">TJMAC</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -35,47 +35,18 @@
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Wall Art</a>
           </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-          </li>
-          <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
-          </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Masthead -->
-  <header class="masthead bg-primary text-white text-center">
-    <div class="container d-flex align-items-center flex-column">
-
-      <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars-tmac.png" alt="">
-
-      <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">TJMAC</h1>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom divider-light">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Visual Artist - Poet - Musician</p>
-
-    </div>
-  </header>
 
   <!-- Portfolio Section -->
   <section class="page-section portfolio" id="portfolio">
     <div class="container">
 
       <!-- Portfolio Section Heading -->
+      <br><br>
       <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Wall Art</h2>
 
       <!-- Icon Divider -->
@@ -205,69 +176,7 @@
     </div>
   </section>
 
-  <!-- About Section -->
-  <section class="page-section bg-primary text-white mb-0" id="about">
-    <div class="container">
-
-      <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom divider-light">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- About Section Content -->
-      <div class="row">
-        <div class="col-lg-4 ml-auto">
-          <p class="lead">TJMAC is a talented musician and artist located in Bucks County PA.  He is currently freelancing as an artist for hire, and is ready to create new and original artwork specifically for you!</p>
-        </div>
-        <div class="col-lg-4 mr-auto">         
-          <p class="lead">To learn more about TJMAC's educational background:
-            <br>            
-            <a class="btn btn-xl btn-outline-light" target='_blank' href='resume/Resume_TJMAC.pdf'>
-              <i class="fas fa-download mr-2"></i>
-              View Resume
-            </a>
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="page-section" id="contact">
-    <div class="container">
-
-      <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <!-- Contact Section Form -->
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <a target="_blank" href="mailto:buck5guy@outlook.com">            
-            <h2 class="page-section-heading text-center text-secondary mb-0">buck5guy@outlook.com</h2>
-          </a>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-	
+ 	
   <!-- Footer -->
   <footer class="footer text-center">
     <div class="container">
@@ -279,8 +188,8 @@
 
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
-          <a href="index.html#portfolio"> 
-            <h2 class="text-center text-white mb-0">View TMAC's<br>Portfolio</h2>
+          <a href="index.html"> 
+            <h2 class="text-center text-white mb-0">Back to TMAC's<br>Portfolio</h2>
           </a>
         </div>
 
