last small change of the night

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <a href="wallpaper.html"> 
-            <h2 class="text-center text-white mb-0">View TMAC's<br>Wall Art</h2>
+            <h2 class="text-center text-white mb-0">View TJMAC's<br>Wall Art</h2>
           </a>
         </div>
 
