--- a/wallpaper.html
+++ b/wallpaper.html
@@ -189,7 +189,7 @@
         <!-- Footer Social Icons -->
         <div class="col-lg-4 mb-5 mb-lg-0">
           <a href="index.html"> 
-            <h2 class="text-center text-white mb-0">Back to TMAC's<br>Portfolio</h2>
+            <h2 class="text-center text-white mb-0">Back to TJMAC's<br>Portfolio</h2>
           </a>
         </div>
 
